--- a/tmux.conf
+++ b/tmux.conf
@@ -4,7 +4,7 @@ set -g mouse on
 # --- Custom key bindings that bypass tmux prefix --- #
 
 # Split panes vertically
-bind-key -n C-v split-window -h
+bind-key -n C-e split-window -h
 
 # Split panes horizontally
 bind-key -n C-o split-window -v
@@ -13,7 +13,7 @@ bind-key -n C-o split-window -v
 bind-key -n C-q kill-pane
 
 # Pane navigation bindings
+bind-key -n C-a select-pane -R
 bind-key -n C-d select-pane -L
 bind-key -n C-s select-pane -D
 bind-key -n C-w select-pane -U
-bind-key -n C-a select-pane -R
