Integrate omz! configurations and update tmux file:

--- a/dot/tmux.conf
+++ b/dot/tmux.conf
@@ -1,5 +1,7 @@
 # Activate mouse navigation in shell
-set -g mouse on
+set -g mouse off
+# Change status bar color
+set -g status-style bg=cyan
 
 # --- Custom key bindings that bypass tmux prefix --- #
 
@@ -13,7 +15,7 @@ bind-key -n C-o split-window -v
 bind-key -n C-q kill-pane
 
 # Pane navigation bindings
+bind-key -n C-w select-pane -U
+bind-key -n C-s select-pane -D
 bind-key -n C-a select-pane -R
 bind-key -n C-d select-pane -L
-bind-key -n C-s select-pane -D
-bind-key -n C-w select-pane -U
